--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        dagger_version = '2.44'
+        room_version = "2.5.1"
+        datastore_version = "1.0.0"
+
+    }
+}
+
 plugins {
-    id 'com.android.application' version '8.1.0-alpha02' apply false
-    id 'com.android.library' version '8.1.0-alpha02' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'com.google.devtools.ksp' version '1.8.10-1.0.9' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
