--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     implementation("io.coil-kt:coil-compose:2.4.0")
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation("androidx.paging:paging-compose:3.2.0")
+    implementation("androidx.paging:paging-runtime:3.2.0")
+
     //endregion
 
     //region hilt
