--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,12 @@ dependencies {
     //region datastore
     implementation "androidx.datastore:datastore-preferences:$datastore_version"
     //endregion
+
+    //region media3
+    def media3_version = "1.1.0"
+    implementation("androidx.media3:media3-session:$media3_version")
+    implementation "androidx.media3:media3-exoplayer:$media3_version"
+    //endregion
+
+
 }
