--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,12 @@ plugins {
 
 android {
     namespace 'com.ashehata.me_player'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.ashehata.me_player"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -63,7 +63,7 @@ dependencies {
     def composeBom = platform('androidx.compose:compose-bom:2023.04.01')
     implementation composeBom
     implementation 'androidx.compose.material:material'
-    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.activity:activity-compose:1.8.0-rc01'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     implementation("io.coil-kt:coil-compose:2.4.0")
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
