--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,17 @@
 buildscript {
     ext {
         dagger_version = '2.44'
-        room_version = "2.5.1"
+        room_version = "2.6.0"
         datastore_version = "1.0.0"
+        media3_version = "1.1.1"
 
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'com.android.application' version '8.1.0-alpha02' apply false
+    id 'com.android.library' version '8.1.0-alpha02' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
     id 'com.google.devtools.ksp' version '1.8.10-1.0.9' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
