--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,14 +73,16 @@ dependencies {
 
     //region compose
     def composeBom = platform('androidx.compose:compose-bom:2023.04.01')
+    def nav_version = "2.7.5"
     implementation composeBom
     implementation 'androidx.compose.material:material:1.6.0-alpha07'
     implementation 'androidx.activity:activity-compose:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
     implementation("io.coil-kt:coil-compose:2.4.0")
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.5.4"
+    implementation "androidx.compose.ui:ui-tooling:1.5.4"
     //endregion
 
     //region hilt
