--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/Theme.MePlayer"
         tools:targetApi="31">
         <activity
-            android:name=".modules.home.presentation.HomeActivity"
+            android:name=".features.home.presentation.HomeActivity"
             android:launchMode="singleInstance"
             android:exported="true">
             <intent-filter>
